# MarketSentiment

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.lambda  Dockerfile.lambda.finbert  Makefile  README.md  pyproject.toml  template.yaml
.github/workflows/: ci.yml
notebooks/: train_colab.ipynb
src/marketsentiment/: __init__.py  config.py  runner.py  schemas.py
src/marketsentiment/aggregation/: __init__.py  aggregate.py
src/marketsentiment/api/: main.py
src/marketsentiment/graph/: __init__.py  nodes.py  pipeline.py  state.py
src/marketsentiment/ingestion/: __init__.py  base.py  bluesky.py  fourchan.py  reddit.py  stocktwits.py
src/marketsentiment/nlp/: __init__.py  tickers.py
src/marketsentiment/observability/: logging.py
src/marketsentiment/scripts/: convert_to_safetensors.py  daily_digest.py  eval_compare.py  harvest_labels.py  prepare_dataset.py  run_pipeline.py  train_finbert.py
src/marketsentiment/sentiment/: __init__.py  base.py  ensemble.py  finbert.py  llm.py
src/marketsentiment/storage/: __init__.py  db.py
tests/: test_aggregate.py  test_ensemble.py  test_tickers.py
