[project]
name = "marketsentiment"
version = "0.1.0"
description = "Agentic pipeline that measures financial-market sentiment across social sources (StockTwits, 4chan /biz/, Reddit, Bluesky) using LangGraph + FinBERT + LLMs (OpenAI/Anthropic)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jprogram01" }]

dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    # Data / API
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
    "duckdb>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# FinBERT inference / training — heavy (torch). Install only when using the
# local sentiment model: pip install -e ".[finbert]"
finbert = [
    "torch>=2.2",
    "transformers>=4.40",
    "accelerate>=0.26",
    "datasets>=2.19",
    "scikit-learn>=1.4",
    "pandas>=2.2",
]
# AWS Lambda daily-digest deployment (SES email, optional S3-backed DuckDB)
serverless = ["boto3>=1.34"]
# Extra source connectors
reddit = ["praw>=7.7"]
bluesky = ["atproto>=0.0.46"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
ms-pipeline = "marketsentiment.scripts.run_pipeline:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
